RESOLVED FIXED207707
[LFC][IFC] LineBreaker should not hold on to the lastWrapOpportunity inline item
https://bugs.webkit.org/show_bug.cgi?id=207707
Summary [LFC][IFC] LineBreaker should not hold on to the lastWrapOpportunity inline item
alan
Reported 2020-02-13 10:10:31 PST
it just needs a bit indicating that there's a previous wrapping opportunity on the line.
Attachments
Patch (17.37 KB, patch)
2020-02-13 10:16 PST, alan
no flags
Radar WebKit Bug Importer
Comment 1 2020-02-13 10:10:50 PST
alan
Comment 2 2020-02-13 10:16:18 PST
WebKit Commit Bot
Comment 3 2020-02-13 11:05:33 PST
Comment on attachment 390663 [details] Patch Clearing flags on attachment: 390663 Committed r256524: <https://trac.webkit.org/changeset/256524>
WebKit Commit Bot
Comment 4 2020-02-13 11:05:35 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.