Source/WebCore/layout/inlineformatting/LineLayoutContext.h
@@ -52,6 +52,7 @@ public:
     };
     struct InlineItemRange {
         bool isEmpty() const { return start == end; }
+        size_t size() const { return end - start; }
         size_t start { 0 };
         size_t end { 0 };
     };
@@ -61,13 +62,16 @@ private:
     void nextContentForLine(LineCandidate&, unsigned inlineItemIndex, const InlineItemRange layoutRange, Optional<unsigned> overflowLength, InlineLayoutUnit currentLogicalRight);
     struct Result {
         LineBreaker::IsEndOfLine isEndOfLine { LineBreaker::IsEndOfLine::No };
-        size_t committedCount { 0 };
+        struct CommittedContentCount {
+            size_t value { 0 };
+            bool isRevert { false };
+        };
+        CommittedContentCount committedCount { };
         Optional <LineContent::PartialContent> partialContent { };
-        const InlineItem* revertTo { nullptr };
     };
     Result tryAddingFloatItem(LineBuilder&, const InlineItem& floatItem);
-    Result tryAddingInlineItems(LineBreaker&, LineBuilder&, const LineCandidate&);
-    void rebuildLineForRevert(LineBuilder&, const InlineItem& revertTo, const InlineItemRange layoutRange);
+    Result tryAddingInlineItems(LineBreaker&, LineBuilder&, const InlineItemRange& layoutRange, const LineCandidate&);
+    size_t rebuildLine(LineBuilder&, const InlineItemRange& layoutRange);
     void commitPartialContent(LineBuilder&, const LineBreaker::RunList&, const LineBreaker::Result::PartialTrailingContent&);
     LineContent close(LineBuilder&, const InlineItemRange layoutRange, unsigned committedInlineItemCount, Optional<LineContent::PartialContent>);
 
@@ -82,6 +86,7 @@ private:
     using FloatList = Vector<const InlineItem*>;
     FloatList m_floats;
     Optional<InlineTextItem> m_partialLeadingTextItem;
+    const InlineItem* m_lastWrapOpportunityItem { nullptr };
     unsigned m_successiveHyphenatedLineCount { 0 };
 };
 
